fixing of detected errors and typos
